chargement page products

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,5 +16,17 @@ collections:
       - { name: price, required: true, label: Prix }
       - { name: description, required: true, label: Description, widget: markdown }
       - { name: image, required: true, label: Image, widget: image }
+      - { name: couleur, required: true, label: Couleur }
+      - { name: taille, required: true, label: Taille }
+      - { name: categorie, required: true, label: Categorie }
+      - { name: sku, required: false, label: Sku}
+      - { name: path, required: false, label: Path }
+  - name: categorie
+    label: Categorie
+    folder: categories
+    create: true
+    fields: 
+      - { name: title, required: true, label: Titre }
+      - { name: description, required: true, label: Description, widget: markdown }
       - { name: sku, required: false, label: Sku}
       - { name: path, required: true, label: Path }
