--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reach/dialog": "^0.10.1",
     "@reach/tabs": "^0.10.1",
     "@reach/visually-hidden": "^0.10.1",
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.21.0",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.0",
@@ -16,12 +17,15 @@
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-plugin-stripe": "^1.2.4",
     "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-source-stripe": "^3.0.7",
     "gatsby-transformer-remark": "^2.8.3",
     "gatsby-transformer-sharp": "^2.5.0",
     "netlify-cms-app": "^2.12.11",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-netlify-identity": "^0.2.5",
