--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,3 +30,12 @@ collections:
       - { name: description, required: true, label: Description, widget: markdown }
       - { name: sku, required: false, label: Sku}
       - { name: path, required: true, label: Path }
+  - name: blog
+    label: blog
+    folder: blogs
+    create: true
+    fields:
+      - { name: title, required: true, label: Title }
+      - { name: resume, required: true, label: Resume }
+      - { name: textcomplet, required: true, label: Textcomplet, widget: markdown }
+      - { name: image, required: true, label: image, widget: image }
